@@ -16,6 +16,7 @@ systemd System and Service Manager
  	- name event sources used in libraries;
  	- remove “bus_kernel_take_fd” function;
  	- remove “bus_kernel_write_message” function;
+ 	- remove “bus_kernel_read_message” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
